--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,124 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Cypress
 cypress/videos/
 cypress/screenshots/
 cypress/downloads/
-cypress/reports/
+cypress/reports/html/
+cypress/reports/junit/
+cypress/reports/json/
+cypress/reports/*.json
+cypress/reports/merged-report.json
 
-# OS
-.DS_Store
-Thumbs.db
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE
-.idea/
 .vscode/
+.idea/
 *.swp
 *.swo
 *~
 
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Logs
+logs
 *.log
-logs/
 
-# Environment
-.env
-.env.local
-.env.*.local
-.env.production
-.env.staging
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Build
-dist/
-build/
-
-# Coverage
+# Coverage directory used by tools like istanbul
 coverage/
-.nyc_output/
+*.lcov
 
-# Temporary files
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Temporary folders
 tmp/
 temp/
 
+# Build outputs
+dist/
+build/
+
+# Test results
+test-results/
+playwright-report/
+test-results.xml
+
+# Cypress specific
+cypress.env.json
+cypress.json.bak
+
+# Generated files
+*.generated.*
